--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
+
+        <string name="map_key" translatable="false">
+        AIzaSyDmFVuBPCTN6Ytyvbbr7Qfic0oaeodclFc
+    </string>
     <string name="app_name">Qadoron</string>
 
     <string name="logo">Qadoron</string>
@@ -63,6 +67,8 @@
     <string name="age">Age</string>
     <string name="gender">Gender</string>
     <string name="disability">Disability</string>
+    <string name="story_title">Story Title</string>
+    <string name="story_details">Story Details</string>
 
 
     <string-array name="rating" translatable="false">
